--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "lark",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "author": {
     "name": "MondoTheme",
     "email": "mondotheme@gmail.com"
+  },
+  "keywords": [
+    "ghost-theme"
+  ],
+  "config": {
+    "posts_per_page": 5
   }
 }
